# bandwidth-limiter

./: .gitignore  config.example.yaml  pyproject.toml  setup.sh
docs/superpowers/specs/: 2026-07-01-tc-limit-python-rewrite-design.md  2026-07-03-phase3-burst-templates-units-design.md
src/tc_limit/: __init__.py  cli.py  config.py  daemon.py  executor.py  sampler.py  templates.py
src/tc_limit/analyzer/: __init__.py
src/tc_limit/storage/: __init__.py  queries.py
tests/: test_config.py  test_daemon.py  test_executor.py  test_sampler.py  test_storage.py
